# AIOS-

./: .gitignore  =1.24.0  =1.3.0  =10.2.0  =13.0.0  =8.2.0  ACHIEVING_97_COVERAGE.md  ARCHITECTURE.md  CHANGELOG.md  CI_CD_FIX_SUMMARY.md  CI_FIX_VERIFICATION.md  COVERAGE_ROADMAP.md  Dockerfile  ENTERPRISE_UPGRADE_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  OMEGA_AIOS_SUMMARY.md  QUALITY_ASSURANCE.md  QUICK_START_VERIFICATION.md  README.md  SECURITY_SUMMARY.md  TEST_REPORT.md  VERIFICATION_PLAN.md  VERIFICATION_REPORT.md  docker-compose.yml  example.py  example_omega.py  main.py  prometheus.yml  pyproject.toml  requirements.txt  setup.py  test_omega_direct.py  verify_imports.py
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  comprehensive-verification.yml
.venom/keys/: ledger_private.pem  ledger_public.pem
docs/: MOBIUS_ENGINE.md  UNIVERSAL_DEPLOYMENT.md  VERIFICATION_SYSTEM.md  cli.md  installation.md  quickstart.md
docs/examples/: README.md  basic_example.py
docs/modules/: ai_ml.md  cloud.md  knowledge.md  observability.md  security.md
k8s/: deployment.yaml  svc.yaml
scripts/: README.md  analyze_coverage_gaps.py  auto_generate_tests.py  coverage_report.py  quick_check.py  systematic_repair_agent.py  verification_agent.py
tests/: __init__.py  test_arm_bridge.py  test_chaos_engineering.py  test_cli_omega.py  test_cuda_bridge.py  test_edge_deploy.py  test_fev_batch_1.py  test_fev_batch_2.py  test_fev_batch_3.py  test_fev_batch_4.py  test_inference_entropy_model.py  test_integration.py  test_integrations_complete.py  test_k8s_autoscale.py  test_ledger.py  test_mesh_rate_limiter.py  test_metal_bridge.py  test_mobius_engine.py  test_multi_region.py  test_oneapi_bridge.py  test_ops_audit_complete.py  test_ops_backup_complete.py  test_pid.py  test_predictive.py  test_production_hardening.py  test_pulse.py  test_rocm_bridge.py  test_stage2.py  test_streaming.py  test_tpu_bridge.py  test_universal_scanner.py  test_wmi_bridge.py
tests/integration/: __init__.py  test_cross_module.py  test_end_to_end.py
tests/performance/: __init__.py  test_benchmarks.py
tests/test_analytics/: __init__.py  test_anomaly_comprehensive.py  test_anomaly_detector.py  test_predictor.py  test_predictor_comprehensive.py  test_stream_processor.py  test_time_series.py
tests/test_cli/: test_cli_commands.py  test_cli_config.py
tests/test_cloud/: __init__.py
tests/test_core/: test_arbiter_comprehensive.py  test_omega_arbiter.py
tests/test_integrations/: __init__.py  test_database.py  test_email.py  test_slack.py  test_webhook.py
tests/test_knowledge/: __init__.py  test_document_store.py  test_graph.py  test_search.py
tests/test_ml/: __init__.py  test_automl.py  test_registry.py  test_serving.py  test_transformer.py  test_transformer_comprehensive.py  test_vision.py
tests/test_observability/: __init__.py  test_metrics.py  test_monitoring.py  test_tracing.py
tests/test_ops/: test_shutdown.py
tests/test_security/: __init__.py  test_audit.py  test_auth.py  test_encryption.py  test_mfa.py  test_secrets.py  test_signing.py
venom/: __init__.py
venom/analytics/: __init__.py  anomaly_detector.py  predictive.py  predictor.py  stream_processor.py  streaming.py  time_series.py
venom/benchmark/: __init__.py  performance.py
venom/cli/: __init__.py  dashboard.py  main.py  omega_cli.py
venom/cloud/: __init__.py
venom/control/: __init__.py  genomic_pid.py
venom/core/: __init__.py  arbiter.py  constants.py  omega_arbiter.py
venom/deployment/: __init__.py  edge_deploy.py  k8s_autoscale.py  multi_region.py  parallel_executor.py
venom/fev/: __init__.py  concepts.py
venom/flows/: __init__.py  parallel_flows.py
venom/hardware/: __init__.py  arm_bridge.py  cuda_bridge.py  metal_bridge.py  oneapi_bridge.py  rocm_bridge.py  tpu_bridge.py  universal_scanner.py  wmi_bridge.py
venom/inference/: __init__.py  (+1 more)
(+74 files in other folders)
